# yahoofinance

./: .gitignore  Cargo.toml  README.md
src/: main.rs  pg_utils.rs  yf2pg.rs  yf2pg_old.rs
