[package]
name = "yahoofinance"
version = "0.1.0"
authors = ["Luke Du <sinnud@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# chrono is for date and time, see code in yahoof.ms as examples
[dependencies]
yahoo-finance = "0.2"
chrono = "0.4"
#postgres = "0.15.2"
postgres = "0.17.5"
